<resources>
    <string name="app_name">万豪</string>
    <string name="v_about_bq">版权：万豪版权所有</string>
    <string name="v_about_sm">声明：您通过本软件参加的商业活动，与Apple Inc无关。</string>
    <string name="rmb">¥</string>
    <item name="tag" type="id"></item>

    <string name="v_problem">\t1. 如何领奖？\n单注100万元以下奖金直接打到您的万豪网账户，可以随时消费和提现；奖金只允许注册账号领取，不可以其他形式代领。如果您中了大奖，系统会自动将奖金转入注册账号。\n
\t2. 如何充值？\n登录后在主页面右下角点击“我的”进入界面，点击页面中间的“充值“ ，进入充值界面，选择充值方式：网上银行、支付宝充值、微信充值等，输入充值金额即可。\n
\t3. 如何提现？\n登录后在主页面右下角点击“我的”进入界面，点击页面中间的“提现”，进入“提现界面“，按照提示操作即可完成提现，实时到账。\n
\t4. 如何购彩？\n登录后在“购彩”选择您想购买的彩种和投注号码，确认支付。购买成功后，您的投注将自动生成订单，可以在主页面右下方“我的”中查看您的购彩记录，如您中奖，奖金将自动派发到您的账户中。\n
\t5. 如何跟别人合资买彩票？\n合买是由多人共同出资购买彩票，按照出资比例分享奖金的投注方式。您可以在“合买”中挑选发起人战绩优秀、号码靠谱的方案进行跟单。方案中奖后按认购方案的比例分享奖金。</string>
    <string name="v_problem_t1">1. 如何领奖？</string>
    <string name="v_problem_c1">单注100万元以下奖金直接打到您的万豪网账户，可以随时消费和提现；奖金只允许注册账号领取，不可以其他形式代领。如果您中了大奖，系统会自动将奖金转入注册账号。</string>
    <string name="v_problem_t2">2. 如何充值？</string>
    <string name="v_problem_c2">登录后在主页面右下角点击“我的”进入界面，点击页面中间的“充值“ ，进入充值界面，选择充值方式：网上银行、支付宝充值、微信充值等，输入充值金额即可。</string>
    <string name="v_problem_t3">3. 如何提现？</string>
    <string name="v_problem_c3">登录后在主页面右下角点击“我的”进入界面，点击页面中间的“提现”，进入“提现界面“，按照提示操作即可完成提现，实时到账。</string>
    <string name="v_problem_t4">4. 如何购彩？</string>
    <string name="v_problem_c4">登录后在“购彩”选择您想购买的彩种和投注号码，确认支付。购买成功后，您的投注将自动生成订单，可以在主页面右下方“我的”中查看您的购彩记录，如您中奖，奖金将自动派发到您的账户中。</string>
    <string name="v_problem_t5">5. 如何跟别人合资买彩票？</string>
    <string name="v_problem_c5">合买是由多人共同出资购买彩票，按照出资比例分享奖金的投注方式。您可以在“合买”中挑选发起人战绩优秀、号码靠谱的方案进行跟单。方案中奖后按认购方案的比例分享奖金。</string>
    <string name="pay_notic">温馨提示：\n
        1：最低充值金额¥50.00\n
        2：充值无任何手续费\n
        3：如遇充值问题请联系客服</string>
</resources>
