<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_height="match_parent">
    <include layout="@layout/w_common_toolbar"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/color_text_red"
                android:textSize="@dimen/sp_14"
                android:lineSpacingExtra="5dp"
                android:text="@string/v_problem_t1"/>
            <TextView
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/color_text_main_black"
                android:textSize="@dimen/sp_14"
                android:lineSpacingExtra="5dp"
                android:text="@string/v_problem_c1"/>
            <TextView
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/color_text_red"
                android:textSize="@dimen/sp_14"
                android:lineSpacingExtra="5dp"
                android:text="@string/v_problem_t2"/>
            <TextView
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/color_text_main_black"
                android:textSize="@dimen/sp_14"
                android:lineSpacingExtra="5dp"
                android:text="@string/v_problem_c2"/>
            <TextView
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/color_text_red"
                android:textSize="@dimen/sp_14"
                android:lineSpacingExtra="5dp"
                android:text="@string/v_problem_t3"/>
            <TextView
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/color_text_main_black"
                android:textSize="@dimen/sp_14"
                android:lineSpacingExtra="5dp"
                android:text="@string/v_problem_c3"/>
            <TextView
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/color_text_red"
                android:textSize="@dimen/sp_14"
                android:lineSpacingExtra="5dp"
                android:text="@string/v_problem_t4"/>
            <TextView
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/color_text_main_black"
                android:textSize="@dimen/sp_14"
                android:lineSpacingExtra="5dp"
                android:text="@string/v_problem_c4"/>
            <TextView
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/color_text_red"
                android:textSize="@dimen/sp_14"
                android:lineSpacingExtra="5dp"
                android:text="@string/v_problem_t5"/>
            <TextView
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/color_text_main_black"
                android:textSize="@dimen/sp_14"
                android:lineSpacingExtra="5dp"
                android:text="@string/v_problem_c5"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>