<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/w_common_toolbar"/>
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:id="@+id/abhout_iv"
        android:src="@mipmap/ic_launcher"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/abhout_iv"
        android:id="@+id/abhout_name"
        android:textColor="@color/color_text_main_black"
        android:textSize="@dimen/sp_16"
        android:layout_marginTop="16dp"
        android:text="@string/app_name"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/abhout_name"
        android:textColor="@color/color_text_main_black"
        android:textSize="@dimen/sp_14"
        android:layout_marginTop="8dp"
        android:id="@+id/ver_tv"
        android:text="版本号：V1.01"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/abhout_web"
            android:textColor="@color/color_text_main_black"
            android:textSize="10sp"
            android:layout_marginTop="3dp"
            android:text=""/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/ver_qq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_text_main_black"
                android:textSize="10sp"
                android:text="客服QQ："/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#218aff"
                android:id="@+id/about_qq"
                android:textSize="10sp" />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_text_main_black"
            android:textSize="10sp"
            android:layout_marginTop="3dp"
            android:text="@string/v_about_bq"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_text_main_black"
            android:textSize="10sp"
            android:layout_marginTop="3dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/v_about_sm"/>
    </LinearLayout>

</RelativeLayout>